syntax = "proto3";

package metastore.v1;

import "metastore/v1/types.proto";

service IndexService {
  rpc AddBlock(AddBlockRequest) returns (AddBlockResponse) {}
}

message AddBlockRequest {
  BlockMeta block = 1;
}

message AddBlockResponse {}
